CW #34 Line-Oriented Streams